--- a/guíaFuncionamiento_entrega_1/source/packages.tex
+++ b/guíaFuncionamiento_entrega_1/source/packages.tex
@@ -12,6 +12,7 @@
 \usepackage{listings}
 \usepackage{inconsolata}
 \usepackage{float}
+\usepackage{comment}
 
 % \usepackage[square,numbers]{natbib}
 \usepackage{natbib}
