guía de uso actualizada

--- a/guíaUso_entrega_1/source/cover.tex
+++ b/guíaUso_entrega_1/source/cover.tex
@@ -18,7 +18,9 @@ GRADO EN INGENIERÍA INFORMÁTICA DE GESTIÓN Y SISTEMAS DE INFORMACIÓN
 
 \vspace*{2.5cm}
 
-\textbf{\huge \bigskip Trabajo web: Euskoróscopo\\Entrega 1} % Aquí el título de su trabajo 
+\textbf{\huge Euskoróscopo:\\ cómo usar el sistema web}\\
+\vspace{1cm}
+\textbf{\huge Entrega 1}% Aquí el título de su trabajo 
 % Si el título del trabajo supera un párrafo añadir el comando \bigskip antes del título para que no se solapen dichos párrafos
 
 
