más usabilidad y documentación

--- a/guíaUso_entrega_1/source/main.tex
+++ b/guíaUso_entrega_1/source/main.tex
@@ -150,7 +150,7 @@ Existe un usuario general para poder utilizar el sistema sin registrarse:
 \caption{\label{inicio} Formulario de Registro.}
 \end{figure}
 \clearpage
-\noindent Tanto si se introducen unos datos incorrectos de inicio de sesión como si se introduce algún dato con un formato diferente al especificado en el enunciado durante el registro, el sistema nos lo notificará y nos pedirá corregirlo:\\
+\noindent Tanto si se introducen unos datos incorrectos de inicio de sesión como si se introduce algún dato con un formato diferente al especificado en el enunciado durante el registro, el sistema nos lo notificará y nos pedirá corregirlo. Se muestran algunos avisos, se puede probar directamente sobre el sistema para comprobar todos los campos.\\
 \begin{figure}[h]
 \begin{center}
 \includegraphics[scale=0.7]{images/login_error.png}
@@ -239,7 +239,7 @@ Accederemos al formulario de edición, que funciona de la misma manera que el de
 \clearpage
 
 \section*{Eliminación de una entrada}
-\noindent Las entradas se eliminarán de la misma manera en que se editan, pero pulsando el botón \textbf{``Eliminar''} desde la página principal. Se solicita confirmación a través de una notificación ``pop-up''. Una vez eliminada, nos indicará que se ha realizado correctamente la actualización en el sistema.
+\noindent Las entradas se eliminarán de la misma manera en que se editan, pero pulsando el botón \textbf{``Eliminar''} desde la página principal. Se solicita confirmación a través de una notificación ``pop-up''. Una vez eliminada, nos indicará que se ha realizado correctamente la actualización en el sistema (Figura 23).
 \begin{figure}[h]
 \begin{center}
 \includegraphics[scale=0.65]{images/editarEntrada.png}
@@ -248,15 +248,15 @@ Accederemos al formulario de edición, que funciona de la misma manera que el de
 \end{figure}
 \begin{figure}[h]
 \begin{center}
-\includegraphics[scale=0.65]{images/confirmación_borrar.png}
+\includegraphics[scale=0.65]{images/borrado_stack.png}
 \end{center}
 \caption{\label{inicio} Solicitud de confifación.}
 \end{figure}
 \begin{figure}[h]
 \begin{center}
-\includegraphics[scale=0.65]{images/actualización.png}
+\includegraphics[scale=0.65]{images/borrado_stack2.png}
 \end{center}
-\caption{\label{inicio} Mensaje de confimación del borrado.}
+\caption{\label{inicio} Mensaje de cancelación del borrado.}
 \end{figure}
 \clearpage
 
